# southernexposure.com

./: .dockerignore  .envrc  .gitignore  .travis.yml  CHANGELOG.rst  Dockerfile  README.rst  docker-compose.yml  flake.nix  manage.hs
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
client/: .nvmrc  README.md  elm-package.json  elm.json  package-lock.json  package.json  webpack.config.js
client/nginx/: nginx.conf
client/src/: Address.elm  AdvancedSearch.elm  Api.elm  Cart.elm  Category.elm  Checkout.elm  Locations.elm  Main.elm  Messages.elm  Model.elm  OrderDetails.elm  PageData.elm  Ports.elm  Product.elm  QuickOrder.elm  Routing.elm  Search.elm  SeedAttribute.elm  SiteUI.elm  StaticPage.elm  User.elm  Utils.elm  Validation.elm  View.elm  index.js  styles.sass
client/src/Api/: Handlers.elm
client/src/Auth/: CreateAccount.elm  EditAddress.elm  EditContact.elm  EditLogin.elm  Login.elm  MyAccount.elm  ResetPassword.elm  Utils.elm  VerificationRequired.elm  VerifyEmail.elm
client/src/Categories/: AdminViews.elm  Views.elm
client/src/Checkout/: View.elm
client/src/Components/: AdvancedSearch.elm  Alert.elm  Aria.elm  Button.elm  Dropdown.elm  Form.elm  HorizontalForm.elm  IconButton.elm  Microdata.elm  Navbar.elm  OrderDetails.elm  Pager.elm  Pagination.elm  ProfileNavbar.elm  SeedAttribute.elm  Shared.elm  Sorting.elm  Svg.elm  Tooltip.elm
client/src/Components/AddToCart/: AddToCart.elm  Type.elm
client/src/Components/Address/: Address.elm
client/src/Components/Admin/: Admin.elm  AdminDashboard.elm  CategoryAdmin.elm  CategorySalesAdmin.elm  CouponAdmin.elm  CustomerAdmin.elm  OrderAdmin.elm  ProductAdmin.elm  ProductSalesAdmin.elm  SettingsAdmin.elm  ShippingAdmin.elm  StaticPageAdmin.elm  SurchargesAdmin.elm
client/src/Components/Categories/: AdminViews.elm  Views.elm
client/src/Components/Product/: Type.elm  (+2 more)
client/src/Data/: Api.elm  Category.elm  Fields.elm  Locations.elm  Model.elm  Msg.elm  PageData.elm  Product.elm  Search.elm  SeedAttribute.elm  Shared.elm  SiteUI.elm  StaticPage.elm  User.elm  Validation.elm  ViewKey.elm
client/src/Decode/: Utils.elm
client/src/Mock/: Home.elm  home.html
client/src/Models/: Fields.elm  Utils.elm
client/src/Pages/: Cart.elm  Checkout.elm  CreateAccount.elm  EditAddress.elm  EditLogin.elm  Login.elm  MyAccount.elm  QuickOrder.elm  ResetPassword.elm  VerificationRequired.elm  VerifyEmail.elm
client/src/Products/: AdminViews.elm  Pagination.elm  Sorting.elm  Views.elm
client/src/Routing/: Utils.elm
client/src/SiteUI/: Breadcrumbs.elm  Footer.elm  Header.elm  Navigation.elm  Search.elm  Sidebar.elm
client/src/Update/: Utils.elm
client/src/Utils/: Decode.elm  Format.elm  Html.elm  Images.elm  Update.elm  Utils.elm  View.elm
client/src/Views/: Admin.elm  AdminDashboard.elm  Aria.elm  Category.elm  CategorySalesAdmin.elm  CouponAdmin.elm  CustomerAdmin.elm  Format.elm  HorizontalForm.elm  Images.elm  Microdata.elm  OrderAdmin.elm  Pager.elm  ProductSalesAdmin.elm  SettingsAdmin.elm  ShippingAdmin.elm  StaticPageAdmin.elm  SurchargesAdmin.elm  Utils.elm
client/src/style/: tailwind-input.css  tailwind-output.css
server/: .ghci  Makefile  hie.yaml  package.yaml  sese-website.cabal  stack.yaml
server/app/: Main.hs
server/scripts/: CleanCarts.hs  CleanDatabase.hs  DataMigration.hs  ExportOddWeights.hs  ExportProducts.hs  ExportProductsRacks.hs  ExportStoneEdgeXML.hs  ImageMigration.hs  ImportCategoryKeywords.hs  ImportProductKeywords.hs  ImportProductSuggestions.hs  MapCustomers.hs  MergeCustomers.hs  UpdateProductDescriptions.hs  UpdateProductPrices.hs  Utils.hs  entrypoint.sh
server/src/: Api.hs  Auth.hs  Avalara.hs  Cache.hs  Config.hs  Emails.hs  Helcim.hs  Images.hs  ImmortalQueue.hs  MerchantFeed.hs  Models.hs  Postgrid.hs  Routes.hs  Server.hs  Sitemap.hs  StoneEdge.hs  Utils.hs  Validation.hs  Workers.hs
server/src/Control/Immortal/: Queue.hs
server/src/Emails/: AccountCreated.hs  OrderPlaced.hs  OrderStatusUpdated.hs  PasswordReset.hs  VerifyEmail.hs
server/src/Helcim/: API.hs  Utils.hs
server/src/Helcim/API/Types/: CardBatch.hs  Checkout.hs  Common.hs  Customer.hs  Payment.hs  Utils.hs
server/src/Models/: Classes.hs  DB.hs  Fields.hs  PersistJSON.hs  ProvinceCodes.hs  Utils.hs
server/src/Postgrid/: API.hs  Cache.hs  Utils.hs
server/src/Postgrid/API/: Types.hs  Utils.hs
server/src/Routes/: Admin.hs  AvalaraUtils.hs  Carts.hs  Categories.hs  Checkout.hs  CommonData.hs  Customers.hs  EmailVerification.hs  Feeds.hs  Products.hs  Redirects.hs  StaticPages.hs  StoneEdge.hs  Utils.hs
server/src/Routes/Admin/: Categories.hs  CategorySales.hs  Coupons.hs  Customers.hs  Dashboard.hs  Orders.hs  ProductSales.hs  Products.hs  Settings.hs  ShippingMethods.hs  StaticPages.hs  Surcharges.hs
server/src/Servant/Server/Experimental/Auth/: Cookie.hs
server/test/: AvalaraFixtures.hs  Spec.hs  StoneEdgeFixtures.hs
(+27 files in other folders)
