name:                sese-website
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/prikhi/sese-website#readme
license:             BSD3
license-file:        ../LICENSE
author:              Pavan Rikhi
maintainer:          pavan.rikhi@gmail.com
copyright:           2017 Pavan Rikhi
category:            Web
build-type:          Simple
extra-source-files:  ../README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Config
                     , Models
                     , Models.Classes
                     , Models.DB
                     , Models.Utils
                     , Models.Fields
                     , Models.ProvinceCodes
                     , Routes
                     , Routes.Categories
                     , Routes.CommonData
                     , Routes.Products
                     , Routes.StaticPages
                     , Routes.Utils
                     , Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , esqueleto
                     , iso3166-country-codes
                     , mtl
                     , persistent
                     , persistent-template
                     , servant-server
                     , state-codes
                     , tagsoup
                     , text
  default-language:    Haskell2010

executable sese-website-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sese-website
                     , directory
                     , monad-logger
                     , persistent-postgresql
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite sese-website-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sese-website
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable data-migration
  hs-source-dirs:      scripts
  main-is:             DataMigration.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sese-website
                     , bytestring
                     , containers
                     , filepath
                     , io-streams
                     , iso3166-country-codes
                     , monad-logger
                     , mysql-haskell
                     , persistent
                     , persistent-postgresql
                     , resource-pool
                     , scientific
                     , state-codes
                     , text
                     , transformers
                     , uuid
  default-language:    Haskell2010

executable image-migration
  hs-source-dirs:      scripts
  main-is:             ImageMigration.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sese-website
                     , bytestring
                     , directory
                     , filepath
                     , io-streams
                     , mysql-haskell
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Southern-Exposure-Seed-Exchange/southernexposure.com
